модели для кредитного банка

--- a/server/МИГРАЦИЯ.md
+++ b/server/МИГРАЦИЯ.md
@@ -43,14 +43,11 @@ docker compose exec laba-6-django sh
 python manage.py migrate
 
 # Создаение суперпользователя для админки
-python manage.py createsuperuser
+python manage.py createsuperuser --username admin --email lakosiera@mail.ru
 # данные для создания пользователя
 # ================================
-# admin
+# admin / admin
 # lakosiera@mail.ru
-# admin
-# admin
-# y
 # ================================
 
 # выходим из контейнера
